tests/fixtures/invalid/nested_pointer_difference_different_arrays.c
int main(void) {
    int left[2] = {1, 2};
    int right[2] = {3, 4};

    return 5 + ((right + 1) - left);
}
